sites/site1/traefik/manifest/service.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: traefik
    labels:
      app.kubernetes.io/name: traefik
      helm.sh/chart: traefik-8.8.1
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/instance: traefik
    annotations: null
  spec:
    type: LoadBalancer
    selector:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik
    ports:
    - port: 80
      name: web
      targetPort: web
      protocol: TCP
    - port: 443
      name: websecure
      targetPort: websecure
      protocol: TCP
